--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,13 @@
 
 .hidden { display: none;}
 
+a {
+    color: violet;
+    font-size: 2em;
+    text-decoration: none;
+    cursor: grab;
+}
+
 body { 
     font-size: 16px; 
     background-color: black; 
