--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,10 @@
         <header>
             <h1 class="hidden">Team</h1>
             <h2>Look at us! We're AWESOME</h2>
+            <ul>
+                <li><a href="joo">Team Person 1</a></li>
+                <li><a href="joe">Team Person 2</a></li>
+            </ul>
         </header>
     </main>
 </body>
