--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,8 @@
             <h2>Look at us! We're AWESOME</h2>
             <a href="/">HOME</a>
             <ul>
-                <li><a href="/oksil">oksil</a></li>
-                <li><a href="/mariana">mariana</a></li>
+                <li><a href="oksil">oksil</a></li>
+                <li><a href="mariana">mariana</a></li>
             </ul>
         </header>
     </main>
